# DTO/SubAccountDTO.cs
@@ -1,0 +1,11 @@
+﻿#nullable disable
+namespace CameraBase.DTO
+{
+    public class SubAccountDTO
+    {
+        public string SubAccountName { get; set; }
+
+        public string SubAccountPhone { get; set; }
+        public int AccountID { get; set; }
+    }
+}
